<resources>
    <string name="app_name">ZombieDefence</string>

    <string name="start_button">Start Game</string>
    <string name="Settings_button">Settings</string>
    <string name="Store">Store</string>
    <string name="About">About</string>
    <string name="High_Scores">High Scores</string>
    <string name="Back">Back</string>
    <string name="gun_sound">Gun Sound</string>
    <string name="Zombie_sound">Zombie Sound</string>
    <string name="Main_Sound">Main Sound</string>
    <string name="Rescan">Rescan</string>
    <string name="Calibrate">Calibrate Gyroscope</string>
    <string name="Control">Change Control Scheme</string>
    <string name="title_activity_highscore">Highscores</string>
    <string name="large_text"> </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_storemenu">Storemenu</string>
    <string name="camera_button">&#xf030; Take Picture</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
</resources>
