<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blood"
    tools:context="com.example.ecastillo.zombiedefence.MainActivity">

    <Button
        android:text="@string/start_button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:id="@+id/startGame"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" />

    <Button
        android:text="@string/Settings_button"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:id="@+id/settingsButton"
        android:onClick="OpenSettingScreen"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_alignBaseline="@+id/highscorebutton"
        android:layout_alignBottom="@+id/highscorebutton"
        android:layout_toRightOf="@+id/highscorebutton"
        android:layout_toEndOf="@+id/highscorebutton" />

    <Button
        android:text="@string/About"
        android:layout_height="50dp"
        android:id="@+id/button"
        android:layout_width="85dp"
        android:textSize="18sp"
        android:onClick="OpenAboutActivity"
        android:layout_marginBottom="123dp"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/startGame"
        android:layout_alignEnd="@+id/startGame" />

    <Button
        android:text="@string/Store"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:id="@+id/Store"
        android:onClick="OpenStoremenuActivity"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_below="@+id/startGame"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp" />

    <Button
        android:text="@string/High_Scores"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:id="@+id/highscorebutton"
        android:textSize="18sp"
        android:onClick="OpenHighscoreActivity"
        android:textAlignment="center"
        android:layout_alignTop="@+id/Store"
        android:layout_centerHorizontal="true" />




</RelativeLayout>
